--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,9 @@
-plugins {
-    id 'org.springframework.boot' version '2.7.5'
-    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
-    id 'java'
-}
-
-group = 'com.module.process'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
-
-repositories {
-    mavenCentral()
-}
-
+project.ext.mainClassName = "com.module.process.ModuleProcessPostApplication"
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
+    api group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
+    // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
+    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.5.Final'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-tasks.named('test') {
-    useJUnitPlatform()
+
 }
